[gd_scene load_steps=14 format=3 uid="uid://br6ks2rhkpxu2"]

[ext_resource type="Texture2D" uid="uid://dxtgk1dsl2s3d" path="res://assets/spritesheets/5_Floor_Modular_Buildings_48x48.png" id="1_d06u6"]
[ext_resource type="Script" path="res://building.gd" id="1_lit2u"]
[ext_resource type="TileSet" uid="uid://bimax6bsvttiv" path="res://tileset.tres" id="3_mskag"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_iilve"]
size = Vector2(13.0226, 264.542)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mcufe"]
size = Vector2(400, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_a5r2x"]
size = Vector2(224, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_l2erb"]
size = Vector2(80, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ee82a"]
size = Vector2(72.5873, 261.027)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hhq1t"]
size = Vector2(168, 47.3783)

[sub_resource type="AtlasTexture" id="AtlasTexture_bib0c"]
atlas = ExtResource("1_d06u6")
region = Rect2(912, 1776, 432, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_j3oon"]
atlas = ExtResource("1_d06u6")
region = Rect2(0, 1920, 432, 192)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ll36t"]
size = Vector2(432, 64)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1vlev"]
size = Vector2(448, 248)

[node name="Building" type="StaticBody2D"]
position = Vector2(0, 168)
script = ExtResource("1_lit2u")

[node name="Interior" type="Node2D" parent="."]

[node name="Ground Floor" type="StaticBody2D" parent="Interior"]

[node name="ObjectsToShow" type="Node2D" parent="Interior/Ground Floor"]

[node name="TileMap" type="TileMap" parent="Interior/Ground Floor/ObjectsToShow"]
tile_set = ExtResource("3_mskag")
format = 2
layer_0/name = "Ground"
layer_0/z_index = -1
layer_0/tile_data = PackedInt32Array(-65533, 720897, 27, -131069, 720897, 26, -196605, 720897, 26, -262141, 720897, 26, -327677, 720897, 26, -393213, 720897, 24, -65534, 589825, 27, -131070, 589825, 26, -196606, 589825, 26, -262142, 589825, 26, -327678, 589825, 26, -393214, 655361, 24, -65535, 589825, 27, -131071, 589825, 26, -196607, 589825, 26, -262143, 589825, 26, -327679, 589825, 26, -393215, 655361, 24, -65536, 589825, 27, -131072, 589825, 26, -196608, 589825, 26, -262144, 589825, 26, -327680, 589825, 26, -393216, 655361, 24, -1, 589825, 27, -65537, 589825, 26, -131073, 589825, 26, -196609, 589825, 26, -262145, 589825, 26, -327681, 655361, 24, -2, 589825, 27, -65538, 589825, 26, -131074, 589825, 26, -196610, 589825, 26, -262146, 589825, 26, -327682, 655361, 24, -3, 589825, 27, -65539, 589825, 26, -131075, 589825, 26, -196611, 589825, 26, -262147, 589825, 26, -327683, 655361, 24, -4, 589825, 27, -65540, 589825, 26, -131076, 589825, 26, -196612, 589825, 26, -262148, 589825, 26, -327684, 655361, 24, -5, 524289, 27, -65541, 524289, 25, -131077, 524289, 25, -196613, 524289, 25, -262149, 524289, 25, -327685, 524289, 24)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Interior/Ground Floor"]
z_index = 1
z_as_relative = false
position = Vector2(184, -104)
scale = Vector2(1.22863, 0.967712)
shape = SubResource("RectangleShape2D_iilve")
debug_color = Color(0, 0.649543, 0.139167, 0.42)

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Interior/Ground Floor"]
z_index = 1
z_as_relative = false
position = Vector2(-232, -104)
scale = Vector2(1.22863, 0.967712)
shape = SubResource("RectangleShape2D_iilve")
debug_color = Color(0, 0.649543, 0.139167, 0.42)

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Interior/Ground Floor"]
position = Vector2(-24, -224)
shape = SubResource("RectangleShape2D_mcufe")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="Interior/Ground Floor"]
position = Vector2(-112, 16)
shape = SubResource("RectangleShape2D_a5r2x")

[node name="CollisionShape2D5" type="CollisionShape2D" parent="Interior/Ground Floor"]
position = Vector2(136, 16)
shape = SubResource("RectangleShape2D_l2erb")

[node name="EntranceArea" type="Area2D" parent="Interior"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Interior/EntranceArea"]
position = Vector2(48, 24)
scale = Vector2(1.32255, 0.245185)
shape = SubResource("RectangleShape2D_ee82a")

[node name="ExitArea" type="Area2D" parent="Interior"]
scale = Vector2(1, 1.01312)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Interior/ExitArea"]
position = Vector2(44, 47.3783)
shape = SubResource("RectangleShape2D_hhq1t")

[node name="Exterior" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Exterior"]
position = Vector2(-24, 120)
texture = SubResource("AtlasTexture_bib0c")
offset = Vector2(0, -168)

[node name="Sprite2D2" type="Sprite2D" parent="Exterior"]
position = Vector2(-24, -32)
texture = SubResource("AtlasTexture_j3oon")
offset = Vector2(0, -168)

[node name="FadeArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="FadeArea"]
position = Vector2(-24, -264)
shape = SubResource("RectangleShape2D_ll36t")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(-24, -108)
shape = SubResource("RectangleShape2D_1vlev")
debug_color = Color(0.982751, 0, 0.359346, 0.42)

[connection signal="body_entered" from="Interior/EntranceArea" to="." method="_on_entrance_area_body_entered"]
[connection signal="body_exited" from="Interior/EntranceArea" to="." method="_on_entrance_area_body_exited"]
[connection signal="body_entered" from="Interior/ExitArea" to="." method="_on_exit_area_body_entered"]
[connection signal="body_exited" from="Interior/ExitArea" to="." method="_on_exit_area_body_exited"]
[connection signal="body_entered" from="FadeArea" to="FadeArea" method="_on_body_entered"]
[connection signal="body_entered" from="FadeArea" to="." method="_on_fade_area_body_entered"]
[connection signal="body_exited" from="FadeArea" to="FadeArea" method="_on_body_exited"]
[connection signal="body_exited" from="FadeArea" to="." method="_on_fade_area_body_exited"]
